--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,11 @@ This project is a multi-module Maven project that was generated from a Maven arc
 
 == Run Instructions
 
+[IMPORTANT]
+====
+Before running or building this project, you may need to set the `cn1.version` and `cn1.plugin.version` properties in the pom.xml file to point to a version in Maven central.  As of this update, the latest version is 7.0.49.
+====
+
 This project can be run from the command line using maven directly, or using the `run.[sh|bat]` wrapper script.
 
 === Using the `run.[sh|bat]` wrapper script
